<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HBC-Tool</string>
    <string name="select_bundle_file">Select File</string>
    <string name="disassemble">Disassemble</string>
    <string name="assemble">Assemble</string>
    <string name="processing">Processing...</string>
    <string name="no_file_selected">No file selected</string>
    <string name="output_log">Output Log</string>
    <string name="file_info">File Info</string>
    <string name="select_file_hint">Select a .bundle or exported ZIP file to begin</string>
    <string name="permission_required">Storage permission is required to access files</string>
    <string name="permission_denied">Permission denied</string>
    <string name="operation_success">Operation Successful！</string>
    <string name="operation_failed">Operation Failed</string>
    <string name="clear_log">Clear Log</string>
    <string name="export_output">Export Output</string>
    <string name="about">About</string>
    <string name="about_info">HBC-Tool Android Version by Alienkrishn\n\nBased on Kirlif/HBC-Tool\nHermes Bytecode Disassemble/Assemble Tool</string>
</resources>
